--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ body {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 59px auto 0 auto;
   padding: 0 24px;
 }
